# Benzina

./: .gitignore  meson.build  setup.py
.github/workflows/: _pr_sink.yml  pr_sink.yml
examples/python/: imagenet.py  imagenet_pytorch.py
scripts/: setup.py
src/benzina/: native_datasetcore.c  native_nvdecodedataloaderitercore.c  native_nvdecodedataloaderitercorebatchcm.c  native_nvdecodedataloaderitercoresamplecm.c
src/benzina/torch/: dataloader.py  dataset.py  nvdecode.py
src/benzina/utils/: file.py  input_access.py
src/plugins/nvdecode/: main.c
src/tools/nvdecodetest/: main.c
tests/: meson.build
tests/benzina/torch/: meson.build  test_dataloader.py  test_dataset.py  test_devsubset.py  test_operations.py
tests/benzina/utils/: meson.build  test_file.py
